...
					:disabled="loading"
				>
					<UIcon
						name="mdi:image-outline"
						class="size-5 mr-2"
					/>
					Choose Thumbnail
				</IonButton>

				<!-- Preview -->
				<div
					v-if="thumbnailPreview"
					class="relative inline-block"
				>
					<img
						:src="thumbnailPreview"
						alt="Thumbnail preview"
						class="w-full max-w-sm max-h-48 rounded border-2 border-info/50"
					/>
					<IonButton
						color="danger"
						size="small"
						class="absolute top-2 right-2"
...
