...
				<IonToolbar>
					<IonButtons slot="start">
						<IonButton @click="cancelChanges">Cancel</IonButton>
					</IonButtons>
					<IonTitle class="text-center">Select Activities</IonTitle>
					<IonButtons slot="end">
						<IonButton @click="confirmChanges">Done</IonButton>
					</IonButtons>
				</IonToolbar>
				<IonToolbar>
					<IonSearchbar
						:debounce="250"
						@ionInput="handleSearch"
...
