<template>
	<IonPage>
		<IonHeader>
			<IonToolbar>
				<IonTitle>Edit Profile</IonTitle>
				<IonButtons slot="start">
					<IonBackButton :default-href="profileRoute" />
				</IonButtons>
			</IonToolbar>
		</IonHeader>
		<IonContent>
...
