...
						<UAvatar
							slot="start"
							:src="avatarSrc(authStore.currentUser!)"
							:alt="authStore.currentUser?.username"
							size="sm"
						/>
						Challenge a Friend
					</div>
				</IonTitle>
				<IonButtons slot="end">
					<IonButton
						aria-label="Close"
						@click="close"
...
