...

		<div class="flex items-center justify-between gap-2">
			<IonButton
				fill="clear"
				color="medium"
				@click="save(true)"
				>Skip for Now</IonButton
			>
			<IonButton
				color="primary"
				@click="save(false)"
			>
				<UIcon
...
