...
				id="quest-button"
				color="danger"
				:loading="loading"
				:disabled="loading"
				class="self-center"
				@click="handleEndClick"
				>End Quest</IonButton
			>

			<IonButton
				v-else-if="hasOtherActiveQuest && !completed"
				id="quest-button"
				color="warning"
...
				id="quest-button"
				color="success"
				:loading="loading"
				:disabled="loading || questLoading"
				class="self-center"
				@click="handleStart(false)"
				>Start Quest</IonButton
			>

			<IonButton
				v-else
				id="quest-button"
				fill="outline"
...
				]"
			></div>
		</div>
		<div class="flex flex-col items-center my-4 min-h-24 gap-1">
			<LazyUBadge
				id="tile-end"
				aria-label="Quest Reward"
				icon="mdi:medal-outline"
				color="warning"
				variant="solid"
				size="xl"
				class="self-center"
				hydrate-on-visible
...
